<resources>
    <string name="app_name">ProjetWear</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="task_category_here">Student ID</string>
    <string name="task_title_here">Title here</string>
    <string name="task_gps_lat">Task gps_lat</string>
    <string name="task_gps_long">Task gps_long</string>
    <string name="task_message">Task message</string>
    <string name="o">o</string>
    <string name="à">à</string>
    <string name="spinnerTitle">Catégorie</string>
    <string name="result_key">myResultKey</string>
    <string name="reminder">Tache à Réaliser</string>
    <string name="cancel">Annuler</string>
    <string name="voice_input">entrée vocale</string>
    <string name="sensor_usage_stopped">L\'utilisation du capteur est arrêtée</string>
    <string name="using_sensors">Utilisation de capteurs</string>
    <string name="cat_gorie">Catégorie</string>
    <string name="titre">Titre</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="heure">Heure</string>
    <string name="message">Message</string>
    <string name="student_id">Student id</string>
    <string name="cancel_cross">cancel cross</string>
    <string name="v_of_validated">v of validated</string>
    <string name="popup_title_permission_files_access">Cette demande nécessite une autorisation d\'exploitation</string>

    <string-array name="choices">
        <item>reporter le rappel</item>
    </string-array>

    <string-array name="Categorys">
        <item>Evenement</item>
        <item>Rendez-vous</item>
        <item>Anniversaire</item>
        <item>Travail à faire</item>
    </string-array>
</resources>