<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:divider="#00E5EE"
        android:orientation="horizontal"
        android:padding="15dip"
        android:weightSum="4"
        tools:ignore="UselessParent">

        <!--  ListRow Left sied Thumbnail image -->
        <LinearLayout
            android:id="@+id/thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dip"
            android:visibility="visible">

            <TextView
                android:id="@+id/task_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o"

                android:textSize="20sp"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/centerContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/task_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"

                android:text="@string/task_category_here"
                android:textSize="18sp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/task_gps_lat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/task_gps_lat"
                    android:textSize="14sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/task_space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/à"
                    android:textSize="14sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/task_gps_long"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/task_gps_long"
                    android:textSize="14sp"
                    android:typeface="sans" />
            </LinearLayout>

            <TextView
                android:id="@+id/task_list_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/task_message"
                android:textSize="14sp"
                android:typeface="sans" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>