<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_flower">

    <Toolbar
        android:id="@+id/toolbar_task_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:onClick="closeAddTask"
                android:padding="5dp"
                android:src="@drawable/ic_action_close"
                android:contentDescription="@string/cancel_cross" />

            <TextView
                android:id="@+id/toolbar_task_add_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="0dp"
                android:gravity="center_vertical|start"
                android:paddingStart="16dp"
                android:paddingEnd="4dp"
                android:text="Ajouter"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:onClick="doneAddTask"
                android:padding="5dp"
                android:src="@drawable/ic_action_done"
                android:contentDescription="@string/v_of_validated" />
        </LinearLayout>
    </Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_task_add"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">


        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/cat_gorie"
            android:padding="12dp"
            android:prompt="@string/spinnerTitle"

            android:singleLine="true" />


        <EditText
            android:id="@+id/student_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/student_id"
            android:importantForAutofill="no"
            android:padding="12dp"
            android:singleLine="true"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#D2D2D2" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#D2D2D2" />

        <EditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/message"
            android:importantForAutofill="no"
            android:padding="12dp"
            android:singleLine="true"
            android:inputType="text" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#D2D2D2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#D2D2D2" />

    </LinearLayout>
</RelativeLayout>